--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,15 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+
+ /* TABLET 768px */
+ @media screen and (max-width: 768px) {
+    .container {
+        width: 100%;
+    }
+
+    .steps {
+        display: flex;
+    }
+ }
