--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,7 @@ img {
     }
  }
 
+
  @media screen and (max-width: 480px) {
     .row{
         display: flex;
@@ -151,5 +152,15 @@ img {
     .steps .col,
     .lessons .col  {
         width: 100%;
+    }
+ }
+
+ @media screen and (min-width: 768px) {
+    .container {
+        width: 100%;
+    }
+
+    .steps {
+        display: flex;
     }
  }
